--- a/public/control/index.html
+++ b/public/control/index.html
@@ -34,11 +34,11 @@
         <br>
         <div class="row">
             <div class="column">
-                <p>Team A </p>
+                <p id="nAreplace">Team A </p>
                 <input type="text" id="nameA">
             </div>
             <div class="column">
-                <p>Team B</p>
+                <p id="nBreplace">Team B</p>
                 <input type="text" id="nameB">
             </div>
             <button id="updateName">Update Name</button>
@@ -52,11 +52,11 @@
         <p>ONLY INCASE OF ERROR</p>
         <div class="row">
             <div class="column">
-                <p>Team A Points</p>
+                <p id="nApoints">Team A Points</p>
                 <input type="text" id="pointsA">
             </div>
             <div class="column">
-                <p>Team B Points</p>
+                <p id="nBpoints">Team B Points</p>
                 <input type="text" id="pointsB">
             </div>
             <button id="updateScore">Update Score</button>
