--- a/public/control/index.html
+++ b/public/control/index.html
@@ -14,6 +14,7 @@
             <button id="reset">Reset Score</button>
             <button id="show">Show All Answers</button>
             <button id="hide">Hide All Answers</button>
+            <button id="gameOver">Game Over</button>
         </div>
         <br>
         <div class="question" id="question"></div>
@@ -32,6 +33,7 @@
             <button id="w3">Wrong 3</button>
         </div>
         <br>
+        <p>TEAM NAMES</p>
         <div class="row">
             <div class="column">
                 <p id="nAreplace">Team A </p>
@@ -44,6 +46,7 @@
             <button id="updateName">Update Name</button>
         </div>
         <br>
+        <p>POINTS</p>
         <div class="row">
             <button id="teamA">Team A gets the points</button>
             <button id="teamB">Team B gets the points</button>
