--- a/public/index.html
+++ b/public/index.html
@@ -52,6 +52,17 @@
     <div class="wrong">
         <div class="wrong__inner" id="wrong">X X X</div>
     </div>
+    <div class="gameOver hideGameOver" id="gameOver">
+        <h1 class="winnerh1">Winner</h1>
+        <div class="winner" id="winner">
+            <div class="winnerName" id="winnerName">Hello</div>
+            <div class="winnerScore" id="winnerScore">200</div>
+        </div>
+        <div class="loser" id="loser">
+            <div class="loserName" id="loserName">Jim</div>
+            <div class="loserScore" id="loserScore">100</div>
+        </div>
+    </div>
     <script src="/socket.io/socket.io.js"></script>
     <script  src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="./index.js"></script>
