--- a/public/control/index.html
+++ b/public/control/index.html
@@ -56,11 +56,11 @@
         <div class="row">
             <div class="column">
                 <p id="nApoints">Team A Points</p>
-                <input type="text" id="pointsA">
+                <input type="number" id="pointsA">
             </div>
             <div class="column">
                 <p id="nBpoints">Team B Points</p>
-                <input type="text" id="pointsB">
+                <input type="number" id="pointsB">
             </div>
             <button id="updateScore">Update Score</button>
         </div>
